fix the segment bug

--- a/ids_serv/conf/ngx_ids.conf
+++ b/ids_serv/conf/ngx_ids.conf
@@ -1,9 +1,4 @@
 
-
-lua_package_path "/usr/local/openresty/lualib/resty/?.lua;;";
-init_by_lua_file /usr/local/openresty/lua/ids/tools/mx.lua;
-
-
 ##################################################################################
 
 server {
@@ -12,11 +7,11 @@ server {
 
 
 	location /ids/segment/get {
-		content_by_lua_file /usr/local/openresty/lua/ids/ids.lua;
+		content_by_lua_file lua/ids.lua;
 	}
 
 	location /next_id{
-		content_by_lua_file /usr/local/openresty/lua/ids/id.lua; 
+		content_by_lua_file lua/id.lua; 
 	}
 
 #redis config
