add local_cn test, center server

--- a/user_api_center_serv/conf/ngx_center.conf
+++ b/user_api_center_serv/conf/ngx_center.conf
@@ -1,38 +1,22 @@
 
-#user  nobody;
-worker_processes  1;
-error_log  logs/mx_id.log  debug;
-
-#pid        logs/nginx.pid;
-
-
-events {
-    worker_connections  1024;
-}
-
-http{
-
-    lua_package_path "/usr/local/openresty/lualib/resty/?.lua;;";
-    init_by_lua_file /usr/local/openresty/lua/ids/tools/mx.lua;
-
 ##################################################################################
 
-	upstream center.db.maxthon.cn{
-		server center.db.maxthon.cn:3307;
+upstream center.db.maxthon.cn{
+	server center.db.maxthon.cn:3307;
+}
+server{
+	listen 1987;
+	server_name user-api-center.maxthon.cn;
+
+	location /sync{
+		lua_need_request_body on;
+		content_by_lua_file lua/user_api_center.lua;
 	}
-    server{
-        listen 80;
-        server_name user-api-center.maxthon.cn;
 
-        location /sync{
-            lua_need_request_body on;
-            content_by_lua_file /usr/local/openresty/lua/ids/user_api_center.lua;
-        }
-
-		location /center/{
-			proxy_pass http://center.db.maxthon.cn;
-		}
-    }
-##################################################################################
+	location /center/{
+		proxy_pass http://center.db.maxthon.cn;
+	}
 }
+##################################################################################
+
 
