split id serv from ids serv

--- a/user_api_local_cn_serv/conf/nginx.conf
+++ b/user_api_local_cn_serv/conf/nginx.conf
@@ -15,12 +15,10 @@ events {
 
 http{
 
-    lua_package_path "/usr/local/openresty/lualib/resty/?.lua;;";
-    init_by_lua_file lua/tools/mx.lua;
+	lua_package_path "/usr/local/openresty/lualib/resty/?.lua;;";
+	init_by_lua_file lua/tools/mx.lua;
 
-
-include ngx_user_local_cn.conf;
-
-
+	include id.conf;
+	include ngx_user_local_cn.conf;
 }
 
