--- a/user_api_local_cn_serv/conf/ngx_user_local_cn.conf
+++ b/user_api_local_cn_serv/conf/ngx_user_local_cn.conf
@@ -1,6 +1,7 @@
 ##################################################################################
-upstream  ids-u.maxthon.cn{
-	server ids-u.maxthon.cn:80;
+
+upstream  id-u.maxthon.cn{
+	server id-u.maxthon.cn:1988;
 }
 
 upstream db.maxthon.cn{
@@ -24,7 +25,7 @@ server{
 	}
 
 	location /next_id{
-		proxy_pass   http://ids-u.maxthon.cn;
+		proxy_pass   http://id-u.maxthon.cn;
 	}
 	location /mx_user{
 		proxy_pass http://db.maxthon.cn;
