support host,port in cn queue script

--- a/user_api_local_cn_serv/db/conf/user_api_local.conf
+++ b/user_api_local_cn_serv/db/conf/user_api_local.conf
@@ -44,6 +44,11 @@ server
 		rds_json on;
 	}
 
+	location /v1/message/isown{
+		mysql_query "select count(*) from `transaction_table` where region_id = $arg_region_id and user_id = $arg_user_id";
+		rds_json on;
+	}
+
 	location /v1/message/del {
 		mysql_transaction "BEGIN" "delete from `transaction_table` where `region_id` = $arg_region_id" "COMMIT";
 		rds_json on;
