add user_api_local_com register

--- a/user_api_local_com_serv/conf/nginx.conf
+++ b/user_api_local_com_serv/conf/nginx.conf
@@ -4,9 +4,8 @@ worker_processes  1;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+error_log  logs/error.log  debug;
 
-error_log  logs/mx_id.log  debug;
 
 #pid        logs/nginx.pid;
 
@@ -18,17 +17,20 @@ events {
 http{
 
 	lua_package_path "/usr/local/openresty/lualib/resty/?.lua;;";
-	init_by_lua_file /usr/local/openresty/lua/ids/tools/mx.lua;
+	init_by_lua_file lua/tools/mx.lua;
 
 
 ##################################################################################
 
+	upstream ids-u.maxthon.cn{
+		server ids-u.maxthon.cn;
+	}
 	server {
 		listen       80;
 		server_name  id-u.maxthon.com;
 
 		location /next_id{
-			content_by_lua_file /usr/local/openresty/lua/ids/id.lua; 
+			content_by_lua_file lua/id/id.lua; 
 		}
 
 #redis config
@@ -43,11 +45,15 @@ http{
 			redis2_query set $key $val;
 			redis2_pass 10.100.15.7:6379;
 		}
+
+		location /ids/segment/get{
+			proxy_pass http://ids-u.maxthon.cn;
+		}
 	}
 
 ##################################################################################
-	upstream  localhost{
-		server localhost:80;
+	upstream  id-u.maxthon.com{
+		server id-u.maxthon.com;
 	}
 
 	upstream db.maxthon.com{
