--- a/user_api_local_com_serv/db/conf/nginx.conf
+++ b/user_api_local_com_serv/db/conf/nginx.conf
@@ -4,7 +4,7 @@ worker_processes  1;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+error_log  logs/error.log  debug;
 
 #pid        logs/nginx.pid;
 
@@ -15,9 +15,6 @@ events {
 
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
