split the nginx.conf to id.conf and user_api_local_com.conf

--- a/user_api_local_com_serv/conf/nginx.conf
+++ b/user_api_local_com_serv/conf/nginx.conf
@@ -19,83 +19,7 @@ http{
 	lua_package_path "/usr/local/openresty/lualib/resty/?.lua;;";
 	init_by_lua_file lua/tools/mx.lua;
 
-
-##################################################################################
-
-	upstream ids-u.maxthon.cn{
-		server ids-u.maxthon.cn;
-	}
-	server {
-		listen       80;
-		server_name  id-u.maxthon.com;
-
-		location /next_id{
-			content_by_lua_file lua/id/id.lua; 
-		}
-
-#redis config
-		location /redis/id/get{
-			set_unescape_uri $key $arg_key;  
-			redis2_query get $key;
-			redis2_pass 10.100.15.7:6379;
-		}
-		location /redis/id/set{
-			set_unescape_uri $key $arg_key;  
-			set_unescape_uri $val $arg_val;  
-			redis2_query set $key $val;
-			redis2_pass 10.100.15.7:6379;
-		}
-
-		location /ids/segment/get{
-			proxy_pass http://ids-u.maxthon.cn;
-		}
-	}
-
-##################################################################################
-	upstream  id-u.maxthon.com{
-		server id-u.maxthon.com;
-	}
-
-	upstream db.maxthon.com{
-		server 127.0.0.1:3306;
-	}
-
-	server{
-		listen 80;
-
-		server_name user-api-local.maxthon.com;
-
-
-		location /register{
-			lua_need_request_body on;
-			content_by_lua_file lua/user_api_local_register.lua;
-		}
-		
-		location /update{
-			lua_need_request_body on;
-			content_by_lua_file lua/user_api_local_update.lua;
-		}
-
-		location /next_id{
-			proxy_pass   http://id-u.maxthon.com;
-		}
-		location /mx_user/{
-			proxy_pass http://db.maxthon.com;
-		}
-
-
-		location /v1/message{
-			proxy_pass http://db.maxthon.com;
-		}
-
-
-		location /v1/local/sync{
-			lua_need_request_body on;
-			content_by_lua_file /usr/local/openresty/lua/ids/com/user_api_local_message.lua;
-		}
-			
-	}
-
-##################################################################################
+	include id.conf;
+	include user_api_local_com.conf;
 }
 
