fix the cn,com /v1/message/insert bug

--- a/user_api_local_com_serv/db/conf/user_api_local_com.conf
+++ b/user_api_local_com_serv/db/conf/user_api_local_com.conf
@@ -49,7 +49,7 @@ server
 		rds_json on;
 	}
 	location /v1/message/isown{
-		mysql_query "select count(*) from `transaction_table` where region_id = $arg_region_id and user_id = $arg_user_id";
+		mysql_query "select count(*) as count from `transaction_table` where region_id = $arg_region_id and user_id = $arg_user_id";
 		rds_json on;
 	}
 
