--- a/user_api_local_cn_serv/db/conf/user_api_local.conf
+++ b/user_api_local_cn_serv/db/conf/user_api_local.conf
@@ -45,7 +45,7 @@ server
 	}
 
 	location /v1/message/isown{
-		mysql_query "select count(*) from `transaction_table` where region_id = $arg_region_id and user_id = $arg_user_id";
+		mysql_query "select count(*) as count from `transaction_table` where region_id = $arg_region_id and user_id = $arg_user_id";
 		rds_json on;
 	}
 
